# paimon-rust

./: .asf.yaml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/paimon/: Cargo.toml
crates/paimon/src/: error.rs  lib.rs
crates/paimon/src/catalog/: mod.rs
crates/paimon/src/file_index/: bitmap_index.rs  bloom_filter_file_index.rs  file_index_factory.rs  file_index_format.rs  file_index_reader.rs  file_index_result.rs  file_index_writer.rs  file_indexer.rs  mod.rs
crates/paimon/src/fileindex/: file_index_common.rs  file_index_format.rs  file_index_reader.rs  file_index_result.rs  file_index_writer.rs  file_indexer.rs  file_indexer_factory.rs  mod.rs
crates/paimon/src/fs/: mod.rs  seekable_input.rs
crates/paimon/src/io/: file_io.rs  mod.rs  storage.rs
crates/paimon/src/options/: mod.rs  option.rs
crates/paimon/src/predicate/: field_ref.rs  function_visitor.rs  mod.rs  predicate_visitor.rs
crates/paimon/src/spec/: data_file.rs  index_file_meta.rs  index_manifest.rs  manifest.rs  manifest_common.rs  manifest_entry.rs  manifest_file_meta.rs  manifest_list.rs  mod.rs  objects_file.rs  schema.rs  schema_change.rs  snapshot.rs  stats.rs  tokens.rs  types.rs
crates/paimon/tests/fixtures/: array_type.json  array_type_nullable.json  bigint_type.json  bigint_type_nullable.json  binary_type.json  binary_type_nullable.json  boolean_type.json  boolean_type_nullable.json  char_type.json  char_type_nullable.json  date_type.json  date_type_nullable.json  decimal_type.json  decimal_type_nullable.json  double_type.json  double_type_nullable.json  float_type.json  float_type_nullable.json  highly_complex_nested_row_type.json  int_type.json  int_type_nullable.json  local_zoned_timestamp_type.json  local_zoned_timestamp_type_nullable.json  manifest_file_meta_schema.json  map_type.json  map_type_nullable.json  multiset_type.json  multiset_type_nullable.json  row_type.json  row_type_nullable.json  smallint_type.json  smallint_type_nullable.json  time_type.json  time_type_nullable.json  timestamp_type.json  timestamp_type_nullable.json  tinyint_type.json  tinyint_type_nullable.json  varbinary_type.json  varbinary_type_nullable.json  (+2 more)
crates/paimon/tests/fixtures/manifest/: index-manifest-85cc6729-f5af-431a-a1c3-ef45319328fb-0  manifest-8ded1f09-fcda-489e-9167-582ac0f9f846-0  manifest-list-5c7399a0-46ae-4a5e-9c13-3ab07212cdb6-0
crates/paimon/tests/fixtures/snapshot/: snapshot-v3-none-field.json  snapshot-v3.json
src/: lib.rs
